--- a/gae/static/index.html
+++ b/gae/static/index.html
@@ -22,17 +22,17 @@
 	</a>
       </div>
       <div class="body">
-        <div class="text">text</div>
         <div class="footer">
           <span class="date">YYYY-MM-DD</span> /
           <span class="user">user</span>
         </div>
+        <div class="text">text</div>
       </div>
       <div class="star">☆</div>
     </div>
   </div>
   <hr />
-  <button type="submit" id="more">More</button>
+  <button type="submit" id="more">＋</button>
   <button type="submit" id="update">✔</button>
 </body>
 </html>
