Brush up the look and feel

--- a/gae/static/index.html
+++ b/gae/static/index.html
@@ -16,22 +16,24 @@
       <a id="login" href="">Login</a>
     </span>
   </div>
-  <div id="result">
-    <div class="tweet" id="tweet_template">
-      <div class="profile">
-	<a href="" class="profile_url" target="_blank" rel="noreferrer">
-	  <img class="profile_image" />
-	</a>
+  <div class="contents">
+    <div id="result">
+      <div class="tweet" id="tweet_template">
+	<div class="profile">
+	  <a href="" class="profile_url" target="_blank" rel="noreferrer">
+	    <img class="profile_image" />
+	  </a>
+	</div>
+	<div class="body">
+          <div class="info">
+            <span class="user">user</span>
+            @<span class="screen_name">screen_name</span>
+            ・<span class="date">YYYY-MM-DD</span>
+          </div>
+          <div class="text">text</div>
+	</div>
+	<div class="star">☆</div>
       </div>
-      <div class="body">
-        <div class="info">
-          <span class="user">user</span>
-          @<span class="screen_name">screen_name</span>
-          ・<span class="date">YYYY-MM-DD</span>
-        </div>
-        <div class="text">text</div>
-      </div>
-      <div class="star">☆</div>
     </div>
   </div>
   <div class="footer">
